Fixed layout problem in statistic specially in badge

--- a/frontend/styles/home-landing-detailedQ.css
+++ b/frontend/styles/home-landing-detailedQ.css
@@ -439,7 +439,6 @@ hr {
 .statistic-grid {
   display: grid;
   padding: 8px;
-  height: 200px;
   width: auto;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
